--- a/views/tasks.html
+++ b/views/tasks.html
@@ -4,7 +4,7 @@
     <!-- Task question -->
     <p class="taskQuestion">
             When determining if movie reviews are positive or negative,
-            Should the word "<span class="feature">{{ feature.word }}</span>" be included or ignored?</p>
+            Should the word "<span class="feature">{{ feature.word }}</span>" be considered or ignored?</p>
     <div class="col-md-5">
 
         <!-- Performance score-->
