--- a/views/tasks.html
+++ b/views/tasks.html
@@ -36,11 +36,11 @@
 
 <div class="row">
     <div class="col-md-6">
-        <button ng-model="ifInclude" value="include"
-                ng-click="nextIter('include')" class="btn btn-primary IncludeBtn iterBtn"
-                id = "IncludeBtn" role="button">Include</button></div>
+        <button ng-model="ifConsider" value="consider"
+                ng-click="nextIter('consider')" class="btn btn-primary IncludeBtn iterBtn"
+                id = "IncludeBtn" role="button">Consider</button></div>
     <div class="col-md-6">
-        <button ng-model="ifInclude" value="ignore"
+        <button ng-model="ifConsider" value="ignore"
                 ng-click="nextIter('ignore')" class="btn btn-primary IgnoreBtn iterBtn"
                 id = "IgnoreBtn" role="button">Ignore</button></div>
 </div><!-- end submit buttons -->
