--- a/views/instruction.html
+++ b/views/instruction.html
@@ -1,8 +1,10 @@
 <h2>Instructions</h2>
-<p>Please read carefully the following instructions.
-Use the arrows <span class="glyphicon glyphicon-chevron-left"></span> and <span class="glyphicon glyphicon-chevron-right"></span>
-    on the left/right to change pages. You will be
-able to start the task when you reach the fifth page.</p>
+<p>
+    Please carefully read the following instructions, using the arrows
+    <span class="glyphicon glyphicon-chevron-left"></span> and
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    on the left/right to change pages. You will be able to start the task when you reach the fifth page.
+</p>
 
 <div id="carousel-example-generic" class="carousel" data-interval=false
      data-wrap=false>
@@ -20,13 +22,10 @@ able to start the task when you reach the fifth page.</p>
      <div class="item active fix-height">
           <div class="resize">
               <div class="col-md-4">
-                <p>In this HIT, you will help us collect a set of words useful for machines to
-                    analyze the <span class="highlight">sentiment of movie reviews</span>.
-                    There are <span class="highlight">50</span> tasks awaiting,
-                    each provides one word for you to determine if it is relevant
-                    for understanding whether movie reviews are
-                    <span class="highlight">positive or negative</span>.
-                    The task number is shown on the top.
+                <p>In this HIT, you will help us collect a set of words useful for machines to predict the
+                    <span class="highlight">sentiment (positive or negative) of movie reviews</span>.
+                    There are <span class="highlight">50</span> tasks; each shows one word and asks you to
+                    judge whether it is relevant for determining the review’s sentiment.
                 </p>
               </div>
                <div class="col-md-8">
@@ -37,12 +36,14 @@ able to start the task when you reach the fifth page.</p>
     <div class="item fix-height">
       <div class="resize">
           <div class="col-md-4">
-               <p>Take the task on <span class="highlight">"film"</span>
-                    for example, you will need to determine if you want
-                    to consider <span class="highlight">("Include")</span>
-                    this word or not <span class="highlight">("Ignore")</span> when analyzing the sentiments
-                    of movie reviews. You are given sample review fragments containing the word
-                    "film" for reference. "film" are all bolded and put in the center.
+               <p>Take the task on <span class="highlight">"impressive"</span> for example,
+                   you will need to determine if the machine should
+                   <span class="highlight">"Consider"</span> this word or not
+                   <span class="highlight">("Ignore")</span> when trying to predict the sentiment
+                   of movie reviews.
+                   For context, you are shown example review fragments containing the word
+                   (right side of the screen), but we want the machine to predict the sentiment of
+                   <i>other</i> reviews, including ones not yet written.
                 </p>
               </div>
                <div class="col-md-8">
@@ -53,13 +54,13 @@ able to start the task when you reach the fifth page.</p>
     <div class="item fix-height">
       <div class="resize">
           <div class="col-md-4">
-              <p> As you tackle the task, the <span class="highlight">computer</span>
-                  will estimate with <span class="highlight"> scores how effective
-                including/ignoring</span> the word is for it to judge the sentiments of
-                  reviews similar to the examples provided. <span class="highlight">
-                      It might help you with your decision-</span>
-                  the higher the score, the better the computer can make
-                the call. The score lies in the range of 0-100.
+              <p>As you tackle the task, the <span class="highlight">computer</span>
+                  will try to help by providing an <span class="highlight">estimated score</span>
+                  (between 0-100), that shows how effective <i>it</i> thinks
+                  considering / ignoring the word will be. This score <i>might</i> help you
+                  with your judgment (the higher the score, the better the computer thinks
+                  it can make the call), but be aware that
+                  <span class="highlight">the score may sometimes be wrong</span>.
               </p>
           </div>
           <div class="col-md-8">
@@ -69,13 +70,13 @@ able to start the task when you reach the fifth page.</p>
       <div class="item fix-height">
       <div class="resize">
           <div class="col-md-4">
-              <p>We display the scores right after the options you can take
-              (Include/Ignore), with the higher scored one highlighted with an
-              <span class="betterOpt">orange</span>
-              background <span class="label betterlabel">Ignore, 92.751</span>,
-              and the other one with <span class="worseOpt">blue</span>
-                  <span class="label worselabel">Include, 34.903</span>.
-                  <span class="highlight">Please note the estimate could be inaccurate in many cases.</span>
+              <p>We display the estimated scores right after the options you can take
+                  (Consider/Ignore), with the higher scored one highlighted with an
+                  <span class="betterOpt">orange</span> background
+                  <span class="label betterlabel">Consider, 80</span>,
+                  and the other one with <span class="worseOpt">blue</span>
+                  <span class="label worselabel">Ignore, 43</span>.
+
               </p>
           </div>
           <div class="col-md-8">
@@ -85,9 +86,8 @@ able to start the task when you reach the fifth page.</p>
       <div class="item fix-height">
       <div class="resize">
           <div class="col-md-4">
-              <p>You should submit your decision with
-                on one of the the two submit buttons.
-            Submit your decision to move to the next task.
+              <p>You should submit your decision with on one of the two submit buttons
+                  (labeled consider / ignore); this will take you to the next task.
               </div>
                <div class="col-md-8">
                    <img class="resize-img" src="../assets/img/submit.png" alt="..."></div>
