--- a/views/interview.html
+++ b/views/interview.html
@@ -48,9 +48,10 @@ appropriate radios. From left to right, each radio represents <span class="highl
     <input type="radio" name="polarity" id="polarity_5" value="5" ng-model="interview.polarity" >
     <label for="polarity_5">Strongly agree</label>
 </form>
-<div style="color:red; text-align: center;" ng-show=code!==undefined class="col-md-12">
-<h3>Thank you for participating in the study!</h3>
-<p>Please submit the code to get your reward: {{code}}</p>
+<div ng-show=code!==undefined class="col-md-12">
+    <h3 class="betterOpt">Thank you for participating in the study!</h3>
+    <p>Please submit the code to get your reward: <span class="label betterlabel">{{code}}</span></p>
+    <p>You can now close the window.</p>
 </div>
 <div class="col-md-12">
     <button ng-click="submit()" class="btn btn-primary" id = "submitBtn" role="button">Submit!</button>
