--- a/views/tasks.html
+++ b/views/tasks.html
@@ -31,7 +31,7 @@
 </div><!-- one task -->
 <!-- Submit buttons -->
 
-<div ng-show=!running class="hint-text">Please select one!</div>
+<div ng-show=!running id='hint' class="hint-text">Please select one!</div>
 <div ng-show=running class="hint-text">Running...</div>
 
 <div class="row">
