--- a/views/instruction.html
+++ b/views/instruction.html
@@ -3,7 +3,7 @@
     Please carefully read the following instructions, using the arrows
     <span class="glyphicon glyphicon-chevron-left"></span> and
     <span class="glyphicon glyphicon-chevron-right"></span>
-    on the left/right to change pages. You will be able to start the task when you reach the fifth page.
+    on the left/right to change pages. You will be able to start the task when you reach the sixth page.
 </p>
 
 <div id="carousel-example-generic" class="carousel" data-interval=false
@@ -15,89 +15,105 @@
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         <li data-target="#carousel-example-generic" data-slide-to="3"></li>
         <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
     </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-     <div class="item active fix-height">
+      <div class="item active fix-height">
           <div class="resize">
               <div class="col-md-4">
-                <p>In this HIT, you will help us collect a set of words useful for machines to predict the
-                    <span class="highlight">sentiment (positive or negative) of movie reviews</span>.
-                    There are <span class="highlight">50</span> tasks; each shows one word and asks you to
-                    judge whether it is relevant for determining the review’s sentiment.
-                </p>
+                  <p>In this HIT, you will help us collect a set of words useful for machines to predict the
+                      <span class="highlight">sentiment (positive or negative) of movie reviews</span>.
+                      There are <span class="highlight">50</span> tasks; each shows one word and asks you to
+                      judge whether it is relevant for determining the review’s sentiment.
+                  </p>
               </div>
                <div class="col-md-8">
                   <img class="resize-img" src="../assets/img/taskNum.png" alt="..."></div>
+          </div>
       </div>
 
-    </div>
-    <div class="item fix-height">
-      <div class="resize">
-          <div class="col-md-4">
-               <p>Take the task on <span class="highlight">"impressive"</span> for example,
-                   you will need to determine if the machine should
-                   <span class="highlight">"Consider"</span> this word or not
-                   <span class="highlight">("Ignore")</span> when trying to predict the sentiment
-                   of movie reviews.
-                   For context, you are shown example review fragments containing the word
-                   (right side of the screen), but we want the machine to predict the sentiment of
-                   <i>other</i> reviews, including ones not yet written.
-                </p>
+      <div class="item fix-height">
+          <div class="resize">
+              <div class="col-md-4">
+                  <p>You will receive <span class="highlight">3.25 dollar</span> for your effort
+                      <span class="highlight">if and only if</span> you finish all the
+                      <span>50</span> tasks.
+                  </p>
+                  <p>Expect to spend around <span class="highlight">30</span> minutes to complete this task.
+                        Please do not accept the task if you can't commit to this time duration.
+                  </p>
               </div>
                <div class="col-md-8">
-                   <img class="resize-img" src="../assets/img/example.png" alt="..."></div>
+                  <img class="resize-img" src="../assets/img/taskNum.png" alt="..."></div>
+          </div>
       </div>
 
-    </div>
-    <div class="item fix-height">
-      <div class="resize">
-          <div class="col-md-4">
-              <p>As you tackle the task, the <span class="highlight">computer</span>
-                  will try to help by providing an <span class="highlight">estimated score</span>
-                  (between 0-100), that shows how effective <i>it</i> thinks
-                  considering / ignoring the word will be. This score <i>might</i> help you
-                  with your judgment (the higher the score, the better the computer thinks
-                  it can make the call), but be aware that
-                  <span class="highlight">the score may sometimes be wrong</span>.
-              </p>
-          </div>
-          <div class="col-md-8">
-              <img class="resize-img" src="../assets/img/score.png" alt="..."></div>
-      </div>
-    </div>
       <div class="item fix-height">
-      <div class="resize">
-          <div class="col-md-4">
-              <p>We display the estimated scores right after the options you can take
-                  (Consider/Ignore), with the higher scored one highlighted with an
-                  <span class="betterOpt">orange</span> background
-                  <span class="label betterlabel">Consider, 80</span>,
-                  and the other one with <span class="worseOpt">blue</span>
-                  <span class="label worselabel">Ignore, 43</span>.
-
-              </p>
+          <div class="resize">
+              <div class="col-md-4">
+                   <p>Take the task on <span class="highlight">"impressive"</span> for example,
+                       you will need to determine if the machine should
+                       <span class="highlight">"Consider"</span> this word or not
+                       <span class="highlight">("Ignore")</span> when trying to predict the sentiment
+                       of movie reviews.
+                       For context, you are shown example review fragments containing the word
+                       (right side of the screen), but we want the machine to predict the sentiment of
+                       <i>other</i> reviews, including ones not yet written.
+                    </p>
+                  </div>
+                   <div class="col-md-8">
+                       <img class="resize-img" src="../assets/img/example.png" alt="..."></div>
           </div>
-          <div class="col-md-8">
-              <img class="resize-img" src="../assets/img/score.png" alt="..."></div>
       </div>
-    </div>
       <div class="item fix-height">
-      <div class="resize">
-          <div class="col-md-4">
-              <p>You should submit your decision with on one of the two submit buttons
-                  (labeled consider / ignore); this will take you to the next task.
+          <div class="resize">
+              <div class="col-md-4">
+                  <p>As you tackle the task, the <span class="highlight">computer</span>
+                      will try to help by providing an <span class="highlight">estimated score</span>
+                      (between 0-100), that shows how effective <i>it</i> thinks
+                      considering / ignoring the word will be. This score <i>might</i> help you
+                      with your judgment (the higher the score, the better the computer thinks
+                      it can make the call), but be aware that
+                      <span class="highlight">the score may sometimes be wrong</span>.
+                  </p>
               </div>
-               <div class="col-md-8">
-                   <img class="resize-img" src="../assets/img/submit.png" alt="..."></div>
-          <div class="row">
-              <button class="btn btn-success"
-                      ng-click=currentStage('quiz') role="button">I understand!!</button>
+              <div class="col-md-8">
+                  <img class="resize-img" src="../assets/img/score.png" alt="..."></div>
           </div>
       </div>
-
-    </div>
+      <div class="item fix-height">
+          <div class="resize">
+              <div class="col-md-4">
+                  <p>We display the estimated scores right after the options you can take
+                      (Consider/Ignore), with the higher scored one highlighted with an
+                      <span class="betterOpt">orange</span> background
+                      <span class="label betterlabel">Consider, 80</span>,
+                      and the other one with <span class="worseOpt">blue</span>
+                      <span class="label worselabel">Ignore, 43</span>.
+                  </p>
+              </div>
+              <div class="col-md-8">
+                  <img class="resize-img" src="../assets/img/score.png" alt="..."></div>
+          </div>
+      </div>
+      <div class="item fix-height">
+          <div class="resize">
+              <div class="col-md-4">
+                  <p>You should submit your decision with on one of the two submit buttons
+                      (labeled consider / ignore); this will take you to the next task.</p>
+                  <p>You can only submit after
+                      <span class="highlight">{{ enableSubmitSecond }} seconds</span>.</p>
+                  </div>
+                   <div class="col-md-8">
+                       <img class="resize-img" src="../assets/img/submit.png" alt="..."></div>
+              <div class="row">
+                  <button class="btn btn-success"
+                          ng-click=currentStage('quiz') role="button">I understand!!</button>
+              </div>
+          </div>
+      </div>
   </div>
 
   <!-- Controls -->
