--- a/views/instruction.html
+++ b/views/instruction.html
@@ -25,7 +25,7 @@
               <div class="col-md-4">
                   <p>In this HIT, you will help us collect a set of words useful for machines to predict the
                       <span class="highlight">sentiment (positive or negative) of movie reviews</span>.
-                      There are <span class="highlight">50</span> tasks; each shows one word and asks you to
+                      There are <span class="highlight">{{totalIter}}</span> tasks; each shows one word and asks you to
                       judge whether it is relevant for determining the review’s sentiment.
                   </p>
               </div>
@@ -37,10 +37,12 @@
       <div class="item fix-height">
           <div class="resize">
               <div class="col-md-4">
+
                   <p>You will receive <span class="highlight">3.25 dollar</span> for your effort
                       <span class="highlight">if and only if</span> you finish all the
-                      <span>50</span> tasks.
+                      <span>{{totalIter}}</span> tasks.
                   </p>
+
                   <p>Expect to spend around <span class="highlight">30</span> minutes to complete this task.
                         Please do not accept the task if you can't commit to this time duration.
                   </p>
