--- a/views/instruction.html
+++ b/views/instruction.html
@@ -37,13 +37,13 @@
       <div class="item fix-height">
           <div class="resize">
               <div class="col-md-4">
-                  <!--
-                  <p>You will receive <span class="highlight">3.25 dollar</span> for your effort
+
+                  <p>You will receive <span class="highlight">1.45 dollar</span> for your effort
                       <span class="highlight">if and only if</span> you finish all the
                       <span>{{totalIter}}</span> tasks.
                   </p>
-                  -->
-                  <p>Expect to spend around <span class="highlight">30</span> minutes to complete this task.
+
+                  <p>Expect to spend around <span class="highlight">10-15</span> minutes to complete this task.
                         Please do not accept the task if you can't commit to this time duration.
                   </p>
               </div>
@@ -105,10 +105,10 @@
               <div class="col-md-4">
                   <p>You should submit your decision with on one of the two submit buttons
                       (labeled consider / ignore); this will take you to the next task.</p>
-                  <!--
+
                   <p>You can only submit after
                       <span class="highlight">{{ enableSubmitSecond }} seconds</span>.</p>
-                  -->
+
                   </div>
                    <div class="col-md-8">
                        <img class="resize-img" src="../assets/img/submit.png" alt="..."></div>
