--- a/views/interview.html
+++ b/views/interview.html
@@ -51,6 +51,6 @@
 
 <div style="text-align: center" ng-show=code!==undefined class="col-md-12">
     <h3 class="betterOpt">Thank you for participating in the study!</h3>
-    <p>Please submit the code <!--to get your reward-->: <span class="label betterlabel">{{code}}</span></p>
+    <p>Please submit the code to get your reward: <span class="label betterlabel">{{code}}</span></p>
     <p>You can now close the window.</p>
 </div>
