--- a/views/instruction.html
+++ b/views/instruction.html
@@ -106,7 +106,7 @@
                   <p>You should submit your decision with on one of the two submit buttons
                       (labeled consider / ignore); this will take you to the next task.</p>
 
-                  <p>You can only submit after
+                  <p>You can only submit after the task has been displayed for
                       <span class="highlight">{{ enableSubmitSecond }} seconds</span>.</p>
 
                   </div>
