--- a/views/instruction.html
+++ b/views/instruction.html
@@ -38,13 +38,13 @@
           <div class="resize">
               <div class="col-md-4">
 
-                  <p>You will receive <span class="highlight">1.45 dollar</span> for your effort
+                  <p>You will receive <span class="highlight">1.45 dollars</span> for your effort
                       <span class="highlight">if and only if</span> you finish all the
                       <span>{{totalIter}}</span> tasks.
                   </p>
 
                   <p>Expect to spend around <span class="highlight">10-15</span> minutes to complete this task.
-                        Please do not accept the task if you can't commit to this time duration.
+                        Please do not accept the task if you cannot commit to this time duration.
                   </p>
               </div>
                <div class="col-md-8">
