--- a/views/instruction.html
+++ b/views/instruction.html
@@ -48,7 +48,7 @@
                   </p>
               </div>
                <div class="col-md-8">
-                  <img class="resize-img" src="../assets/img/taskNum.png" alt="..."></div>
+                  <img class="resize-img" src="../assets/img/task.png" alt="..."></div>
           </div>
       </div>
 
@@ -63,7 +63,7 @@
                     </p>
                   </div>
                    <div class="col-md-8">
-                       <img class="resize-img" src="../assets/img/task.png" alt="..."></div>
+                       <img class="resize-img" src="../assets/img/word.png" alt="..."></div>
           </div>
       </div>
 
