--- a/views/tasks.html
+++ b/views/tasks.html
@@ -21,7 +21,7 @@
     <div class="col-md-7">
         <div class="element-view-header"><div class="element-view-title">Examples</div></div>
         <div id="element-view-container-inner" class="element-view-container-inner">
-            <table class="table table-condensed table-striped">
+            <table class="table table-condensed">
                 <tr ng-repeat="doc in doclist">
                                 <!--<td ng-bind-html="doc"></td>-->
                     <td class="left">{{ doc.pre }}</td>
